--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,4 @@
-//// GD Theme - Remastered
+//// GDT - A 'Steam' (store.steampowered.com) skin based on 'Game Debate' (game-debate.com)
 config.ini {
-  //// Colours used ONLY for development and testing
-  include "cfg/devcolours.styles"
-
-  //// Dark or Light
-
   include "cfg/dark.styles"
-  //include "cfg/light.styles"
 }
