--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,5 @@
 //// GDT - A 'Steam' (store.steampowered.com) skin based on 'Game Debate' (game-debate.com)
+//// version : 2.8 - 08 September 2017
 config.ini {
-  //// Colours used ONLY for development and testing
-  include "cfg/devcolours.styles"
-
-  //// Dark or Light
-
   include "cfg/dark.styles"
-  //include "cfg/light.styles"
 }
